--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 html {
-    background: linear-gradient(to bottom, #171E30, #24304A, #414859, #6b5d63, #9c746e, #d28064, #d28064, #e16c60, #b51a2a, #541b2e);
+    background: linear-gradient(to bottom, #171E30, #24304A 30%, #414859, #6b5d63, #9c746e, #d28064, #d28064, #e16c60, #b51a2a, #541b2e);
     height: 7224px;
     background-size: 100%;
     background-repeat: no-repeat;
