--- a/css/styles.css
+++ b/css/styles.css
@@ -120,27 +120,49 @@ body {
 
 
 .triangle {
+    position: absolute;
     width: 0;
     height: 0;
-    border-left: 1440px solid transparent;
-    border-bottom: 100px solid transparent;
-    border-top: 100px solid black;
-    /* Cambia el color aquí */
-    position: absolute;
+    border-left: 680px solid transparent;
+    border-right: 680px solid transparent;
+    border-bottom: 680px solid orange;
     top: 0;
-    left: 0;
+    right: 240px;
+    transform: translate(50%, -50%) rotate(45deg);
 }
 
-.img-giuliano {
+section {
+    padding-top: 20vh;
+    height: 96hv;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+    position: relative;
+    left: 50vh;
+}
+
+.profilePic {
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 441px;
-    height: 498px;
-    mix-blend-mode: lighten;
+    gap: 5rem;
+    width: 60vh;
+    height: 60vh;
+    border-radius: 50%;
+    overflow: hidden;
+
 }
 
-.img-giuliano img {
-    max-width: 100%;
-    height: auto;
+.profilePic img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
+#profile {
+    display: flex;
+    justify-content: center;
+    height: 400px;
+    height: 400px;
+    margin: auto 0;
+
 }
