--- a/css/styles.css
+++ b/css/styles.css
@@ -1,115 +1,220 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+
+:root {
+    /*--main: #feed01;*/
+    --main: #61788C;
+    --black: #000;
+    --white: #fff;
+    --border: .2rem solid var(--black);
+    --box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, .3);
+}
+
 * {
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    text-transform: capitalize;
+}
+
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-padding-top: 7rem;
+}
+
+html::-webkit-scrollbar {
+    width: 1rem;
+}
+
+html::-webkit-scrollbar-track {
+    background: var(--main);
+}
+
+html::-webkit-scrollbar-thumb {
+    background: var(--black);
 }
 
 body {
-    background: linear-gradient(to bottom, #171E30, #24304A 30%, #414859, #6b5d63, #9c746e, #d28064, #d28064, #e16c60, #b51a2a, #541b2e);
-    height: 7224px;
-    background-size: 100%;
-    background-repeat: no-repeat;
+    background: var(--main);
+    overflow-x: hidden;
 }
 
-.sidebar {
+section {
+    padding: 5rem 10%;
+}
+
+.header {
+    padding: 1.5rem 10%;
     position: fixed;
     top: 0;
     left: 0;
-    width: 80px;
-    height: 100%;
-    background: transparent;
-    backdrop-filter: blur(40px);
-    border-right: 2px solid rgba(255, 255, 255, .2);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    padding: 6px 14px;
-    transition: .5s;
-}
-
-.sidebar.active {
-    width: 270px;
-}
-
-.sidebar .logo-menu {
+    right: 0;
+    z-index: 1000;
+    background: var(--main);
     display: flex;
     align-items: center;
-    width: 100%;
+    justify-content: space-between;
+}
+
+.header .logo {
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.header #menu-btn {
+    position: fixed;
+    top: 20px;
+    right: 30px;
     height: 70px;
-}
-
-.sidebar .logo-menu .logo {
-    font-size: 25px;
-    color: #fff;
-    pointer-events: none;
-    opacity: 0;
-    transition: .1s;
-}
-
-.sidebar.active .logo-menu .logo {
-    opacity: 1;
-    transition-delay: .2s;
-}
-
-.sidebar .logo-menu .toggle-btn {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 40px;
-    height: 40px;
-    font-size: 22px;
-    color: #fff;
-    line-height: 40px;
+    width: 70px;
+    line-height: 70px;
+    border-radius: 50%;
+    border: var(--border);
+    background: var(--white);
+    font-size: 30px;
     text-align: center;
     cursor: pointer;
-    transition: .5s;
+    z-index: 1000;
+    transition: transform 0.5s ease, background 0.5s ease, color 0.5s ease;
 }
 
-.sidebar.active .logo-menu .toggle-btn {
-    left: 90%;
+.header #menu-btn.fa-times {
+    transform: rotate(180deg);
+    background: var(--main);
+    color: var(--black);
+    border: var(--border);
 }
 
-.sidebar .list {
-    margin-top: 10px;
+.header #menu-btn.fa-times:hover {
+    background: var(--white);
+    color: var(--black)
 }
 
-.list .list-item {
-    list-style: none;
+
+.header #menu-btn:hover {
+    background: var(--black);
+    color: var(--white);
+}
+
+.header .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    height: 100%;
     width: 100%;
-    height: 50px;
-    margin: 5px 0;
-    line-height: 50px;
-}
-
-.list .list-item a {
+    background: var(--black);
     display: flex;
     align-items: center;
-    font-size: 18px;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 6px;
-    white-space: nowrap;
-    transition: .5s;
+    justify-content: center;
+    flex-flow: column;
+    padding-bottom: 50px;
+    transition: clip-path 0.5s ease-in-out;
+    clip-path: circle(0% at 95.3% 8.5%);
 }
 
-.list .list-item.active a,
-.list .list-item a:hover {
-    background: rgba(255, 255, 255, .2);
+.header .navbar.active {
+    clip-path: circle(140% at 95.3% 8.5%);
 }
 
-.list .list-item a i {
-    min-width: 50px;
-    height: 50px;
-    text-align: center;
-    line-height: 50px;
+.header .navbar a {
+    font-size: 30px;
+    padding-bottom: 30px;
+    text-transform: uppercase;
+    color: var(--white);
 }
 
-.sidebar .link-name {
+.header .navbar a::before {
+    content: attr(data-text);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5em;
+    color: var(--white);
+    pointer-events: none;
+    font-weight: bolder;
+    letter-spacing: .4em;
     opacity: 0;
-    pointer-events: none;
-    transition: opacity .3s;
+    z-index: -1;
 }
 
-.sidebar.active .link-name {
-    opacity: 1;
-    pointer-events: none;
-    transition-delay: calc(.1s * var(--i));
+.header .navbar a:hover::before {
+    letter-spacing: 0em;
+    opacity: .1;
+    transition: .3s ease-out;
+    text-align: center;
+}
+
+.home {
+    margin-top: 8rem;
+    position: relative;
+}
+
+.home h3 {
+    text-align: center;
+    font-size: 6vw;
+    text-transform: uppercase;
+}
+
+.home .home-text {
+    -webkit-text-stroke: .2rem var(--black);
+    color: var(--white);
+    position: relative;
+    z-index: 10;
+}
+
+
+
+
+
+
+@media (max-width:1200px) {
+
+    .header {
+        padding: 1.5rem 5%;
+    }
+
+    section {
+        padding: 3rem 5%;
+    }
+
+}
+
+@media (max-width:991px) {
+
+    html {
+        font-size: 55%;
+    }
+
+    section {
+        padding: 3rem 2rem;
+    }
+
+
+    .header {
+        padding: 1.5rem 2rem;
+    }
+}
+
+@media (max-width:768px) {
+
+    .navbar {
+        width: 100%;
+        z-index: 1200;
+        background: none;
+    }
+
+}
+
+
+@media (max-width:450px) {
+
+    html {
+        font-size: 50%;
+    }
 }
